--- a/css/header.css
+++ b/css/header.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 header{
-  /* background-color: rgb(36, 37, 42); */
+  background-color: rgb(0, 0, 0);
   position: relative;
+  min-height: 50vh;
 }
+
 .nav-links {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
   background-color: transparent;
   list-style: none;
 }
+
 .nav-links li {
   display: inline-block;
   padding: 0px 20px;
@@ -20,30 +21,35 @@ header{
   transition: all 0.3s ease 0s;
   text-decoration: none;
 }
+
 .nav-links li a {
   transition: all 0.3s ease 0s;
 }
+
 .nav-links li:hover {
   background-color: rgba(116, 0, 0, 0.6);
 }
+
 .nav-bar {
   position: relative;
   bottom: 40px;
   vertical-align: bottom;
-  width: 76vw;
+  width: auto;
   background-color: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 10%;
 }
-li, a, .login{
+
+.nav-links > li, a, .login{
   font-family: "Montserrat",sans-serif;
   font-weight: 500;
   font-size: 20px;
   color: #edf0f1;
   text-decoration: none;
 }
+
  .login {
   padding: 9px 25px;
   background-color: rgba(116, 0, 0, 1);
@@ -53,17 +59,21 @@ li, a, .login{
   transition: all 0.3s ease 0s;
   text-decoration: none;
 } 
+
 .login:hover {
   background-color: rgba(116, 0, 0, 0.6);
 }
+
 .logo-picture{
   display: flex;
   text-align: center;
   position: sticky;
   max-width: 100%;
+  width: 100vw;
   cursor: pointer;
-  margin: auto;
+  margin: 0;
 }
+
 .menu {
   text-align: center;
   padding-bottom: 10px;
