--- a/css/style.css
+++ b/css/style.css
@@ -23,28 +23,18 @@ body {
   justify-content: space-between;
   font-family: 'Montserrat', serif;
   background-color: rgb(0, 0, 0);
-  margin: 0;
+  margin:auto;
 }
+
 p {
   margin: 20px;
   color: #fff;
 }
 
  h2 {
-  /* padding-left: 10px;
-  text-align: left; */
   color: #ffffff;
 } 
-/* Kommenterar ut denna medans jag experimenterar */
-/* .firstcolumn {
-  float: left;
-  width: 20vw;
-  padding: 5px;
-  padding-left: 10px;
-  margin: 1%;
-  border-radius: 2%;
-  display: block;
-} */
+
 .secondcolumn {
   display: flex;
   flex-wrap: wrap;
@@ -55,49 +45,17 @@ p {
   padding: 10px 10px 60px 10px;
   border: 1px solid #fff;
 }
-/* Kommenterar ut denna medans jag experimenterar */
-/* .thirdcolumn {
-  float: left;
-  width: auto;
-  padding: 5px;
-  margin: 1%;
-  border-radius: 2%;
-  display: block;
-} */
-
-/* Kommenterar ut denna så den inte ändrar bilder per automatik */
-/* img {
-  width: 25%;
-  border-radius: 3%;
-} */
 
 .schemarubrik {
   font-weight: bold;
 }
 
-/* .firstimage {
-  width: 100%;
-  border-radius: 3%;
-} */
-
-/* iframe {
-  border-radius: 3%;
-} */
-
-/* .scheduleObj {
-  max-height: 200px;
- max-width: 300px; 
-  overflow-x: hidden;
-  overflow-y: scroll;
-} */
 
 /* ---------------------- BOKNINGSFORMULÄR STYLING ---------------------- */
 #booking-button {
   margin: 30px 30px 0px 30px;
 }
-/* .secondcolumn p {
-  text-align: left;
-} */
+
 form {
   margin-left: 10px;
 }
@@ -131,7 +89,7 @@ input {
 
 .bookingField p {
   text-align: center;
-  }
+}
 
 
 
