--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import './movieInformation.css';
 @import './seats-booking.css';
 @import './pictureLinks.css';
+@import './dropdown.css';
 
 *{
     box-sizing: border-box;
@@ -131,4 +132,30 @@ input {
 
 
 
+.ticket-dropdown-vuxna {
+   -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  background-image: url("/images/FV.png");
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 5px;
+  border: 1px solid #dfdfdf;
+  border-radius: 2px;
+  margin-right: 2rem;
+  padding: 1rem;
+  padding-right: 2rem;
+ 
+}
+#ticket-dropdown-vuxna {
+ 
+  background-color: #f9f9f9;
+  min-width: 60px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+.ticket-dropdown-vuxna:hover #ticket-dropdown-vuxna{
+  display: block;
 
+}
