--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,6 +7,7 @@
 @import './pictureLinks.css';
 @import './dropdown.css';
 @import './nav-dropdown.css';
+@import './login-reg-form.css';
 
 *{
     box-sizing: border-box;
