--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -1,3 +1,79 @@
-.login{
+.secondcolumn {
+  position: absolute ;
+  display: flexbox(right);
+  position: absolute;
+}
+main{
+    background-image:linear-gradient(120deg,#cf6d6d,#2c1f1f,#ddd)
+
+}
+.loginForm {
+ position: relative;
+ right: -25%;
+  width: 50%;
+  height: 80%;
+  background: #f1f1f1;
+  padding: 5em,2.5;
+  border-radius: 10px;
+
+}
+.loginForm h4{
+  display:flexbox,();   /*fixa en flexbox för positionering av logintext och bild*/ 
+  text-align:center;
+  display:inline-block;
+
+}
+
+.loginUser{
+  color:rgb(0, 0, 8);
+  background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+}
+.registrera{
+    color:rgb(0, 0, 8);
+  background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+
+}
+.tb{
+ 
+	padding: 1px;  
+    font-size: 12px;  
+    text-shadow: 0px 1px 0px #fff;  
+    outline: none; 
+}
+.tb:focus{
+border: 2px solid #aaa;
+border:linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+outline: none;
+
+ 
+}
+.h-tag{
+  display: border;
+  font-size: 200%;
+ color:#fff;
+}
+  .fvpic{
+    position: right 70%;
+    width: 15%;
+    height: 15%;
+    animation:spin 4s linear infinite;
+}
+
+@keyframes spin { 100% { -webkit-transform: rotateY(360deg); transform:rotateY(360deg); } }
+
+
+.regform2{
+   position: relative;
+ right: -25%;
+  width: 50%;
+  height: 80%;
+  background: #f1f1f1;
+  padding: 80px,40px;
+  border-radius: 10px;
+}
+.regform2 tbody .tb{
+  
+  flex-direction: row;
+  align-items: center;
 
 }
