--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -1,38 +1,47 @@
 .secondcolumn {
-  position: absolute ;
+  /* position: absolute ;
   display: flexbox(right);
-  position: absolute;
+  position: absolute; */
 }
 main{
-    background-image:linear-gradient(120deg,#cf6d6d,#2c1f1f,#ddd)
+    background-image:linear-gradient(to bottom right,  rgba(85, 157, 185,0.8), rgba(98, 236, 156, 0.8));
+
+    /* background-image:linear-gradient(120deg,#740000,#2c1f1f,#ddd) */
 
 }
+/* -----------loginformulär--------- */
 .loginForm {
+  
+  /* border: 2px solid rgba(255, 255, 255,0.2); */
  position: relative;
  right: -25%;
   width: 50%;
   height: 80%;
-  background: #f1f1f1;
+  background: rgba(255, 255, 255,0.1);
+  /* background: #f1f1f1; */
   padding: 5em,2.5;
   border-radius: 10px;
 
 }
+/* -------------h4 under inloggning------------- */
 .loginForm h4{
   display:flexbox,();   /*fixa en flexbox för positionering av logintext och bild*/ 
   text-align:center;
   display:inline-block;
 
 }
-
+/* ----------loggin knapp--------- */
 .loginUser{
-  color:rgb(0, 0, 8);
-  background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+  color:rgb(255, 255, 255);
+  background: #740000;
 }
+/* ------------reg knapp------------- */
 .registrera{
-    color:rgb(0, 0, 8);
-  background: linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+  color:rgb(255, 255, 255);
+  background: #740000;
 
 }
+/* -----------input class för loggin/reg form ----------- */
 .tb{
  
 	padding: 1px;  
@@ -44,14 +53,18 @@ main{
 border: 2px solid #aaa;
 border:linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
 outline: none;
-
- 
+/* ----------------------------------------------------------- */
+ /* h-tag klass för h2 tag finns både i login och reg html */
 }
 .h-tag{
   display: border;
   font-size: 200%;
  color:#fff;
+  display:flexbox,();   /*fixa en flexbox för positionering av logintext och bild*/ 
+  text-align:center;
+  display:inline-block;
 }
+/* ------------loggo bild och spinn i formulär-------------*/
   .fvpic{
     position: right 70%;
     width: 15%;
@@ -61,7 +74,7 @@ outline: none;
 
 @keyframes spin { 100% { -webkit-transform: rotateY(360deg); transform:rotateY(360deg); } }
 
-
+/*----------------reg formulär-------------- */
 .regform2{
    position: relative;
  right: -25%;
@@ -70,10 +83,48 @@ outline: none;
   background: #f1f1f1;
   padding: 80px,40px;
   border-radius: 10px;
+  flex-grow: 1;
 }
+/* ------------input i reg form----------- */
 .regform2 tbody .tb{
   
+ 
+
+
+}
+.regform2 input{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
   flex-direction: row;
   align-items: center;
+	padding: 1px;  
+  font-size: 12px;  
+  text-shadow: 0px 1px 0px #fff;  
+  outline: none; 
+  flex-grow: 1;
+}
+.regform2 .btn{
+  color:rgb(255, 255, 255);
+  background: #cf6d6d;
+  border: none;
+   font-family: 'Montserrat', serif;
+  padding: 0;
+ 
+  
 
+
+}
+.regform2 td .tb{
+  left:25%;
+  display: flexbox;
+  /* align-items:right;
+  align-content: center; */
+}
+
+@media screen and(max-width:1000px){
+  .loginForm{
+    background-color: black;
+  }
 }
