--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -4,7 +4,7 @@
   position: absolute; */
 }
 main{
-    background-image:linear-gradient(to bottom right,  rgba(85, 157, 185,0.8), rgba(98, 236, 156, 0.8));
+    /* background-image:linear-gradient(to bottom right,  rgba(85, 157, 185,0.8), rgba(98, 236, 156, 0.8)); */
 
     /* background-image:linear-gradient(120deg,#740000,#2c1f1f,#ddd) */
 
