--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -80,7 +80,7 @@ outline: none;
  right: -25%;
   width: 50%;
   height: 80%;
-  background: #f1f1f1;
+  background: rgba(255, 255, 255,0.1);
   padding: 80px,40px;
   border-radius: 10px;
   flex-grow: 1;
@@ -106,11 +106,19 @@ outline: none;
   flex-grow: 1;
 }
 .regform2 .btn{
-  color:rgb(255, 255, 255);
-  background: #cf6d6d;
-  border: none;
-   font-family: 'Montserrat', serif;
-  padding: 0;
+  font-family: fantasy;
+    color:rgb(255, 255, 255);
+  background: #740000;
+	padding: 1px;  
+    font-size: 12px;  
+    text-shadow: 0px 1px 0px #fff;  
+    outline: none; 
+}
+.regform2 #res:focus{
+border: 2px solid #aaa;
+border:linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
+outline: none;
+/* ------------
  
   
 
