--- a/www/css/seats-booking.css
+++ b/www/css/seats-booking.css
@@ -1,11 +1,10 @@
-
-*{
+* {
   box-sizing: border-box;
-} 
+}
 
 .seatingBooking {
   color: white;
-  background-color:black;
+  background-color: black;
   min-width: 400px;
   /* width: 99%; */
   border: solid black 1px;
@@ -30,18 +29,17 @@
   }
 }
 
-
 .seats {
-  display:flex;
+  display: flex;
   flex-shrink: 1;
   min-width: 25px;
-  
+
   height: auto;
   padding-top: 1%;
   font-family: 'Courier New', Courier, monospace;
   /* text-decoration: underline; */
   display: inline-block;
-  font-size:12px;
+  font-size: 12px;
   font-weight: bolder;
   color: rgb(27, 10, 10);
   background-color: red;
@@ -74,12 +72,23 @@
   border: none;
 }
 
-button:hover {
-  background-color: lightgrey;
+.ticketType button {
+  font-size: 16px;
+  color: white;
+  background-color: rgba(116, 0, 0, 1);
+  border: none;
+  border-radius: 50px;
   cursor: pointer;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+  padding: 10px;
+  /* border: solid 1 px white; */
 }
 
-
+.ticketType button:hover {
+  background-color: rgba(116, 0, 0, 0.6);
+  cursor: pointer;
+}
 
 .movieScreen {
   width: 80%;
@@ -87,6 +96,10 @@ button:hover {
   background-color: white;
   border: solid grey 3px;
   margin-bottom: 45px;
+}
+
+.movieScreen > p {
+  color: rgb(7, 7, 7);
 }
 
 /* .schema {
