--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 @import './footer.css';
@@ -10,11 +10,9 @@
 @import './nav-dropdown.css';
 @import './login-reg-form.css';
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-
-
 
 h1 {
   font-family: 'David Libre', serif;
@@ -24,7 +22,7 @@ button {
   padding: 0;
   border: none;
 }
-main { 
+main {
   flex-grow: 1;
 }
 
@@ -34,36 +32,40 @@ body {
   flex-direction: column;
   justify-content: space-between;
   font-family: 'Montserrat', serif;
-  background: linear-gradient(to bottom right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.85));
-  margin:auto;
+  background: linear-gradient(
+    to bottom right,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0.85)
+  );
+  margin: auto;
 }
 
 p {
   color: #fff;
 }
 
- h2 {
+h2 {
   color: #ffffff;
-} 
+}
 
 .secondcolumn {
   overflow: hidden;
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  flex-flow:column;
+  flex-flow: column;
   width: 60vw;
   margin: auto;
   margin-bottom: 60px;
   padding: 10px 10px 60px 10px;
 }
 @media screen and (max-width: 1000px) {
-  .secondcolumn,.regform2,.loginForm {
+  .secondcolumn,
+  .regform2,
+  .loginForm {
     width: 70vw;
-     margin: auto;
+    margin: auto;
   }
-  
-  
 }
 @media screen and (max-width: 768px) {
   .secondcolumn {
@@ -84,7 +86,6 @@ p {
   font-weight: bold;
 }
 
-
 /* ---------------------- BOKNINGSFORMULÄR STYLING ---------------------- */
 #booking-button {
   margin: 30px 30px 0px 30px;
@@ -97,18 +98,18 @@ form {
   margin-left: 10px;
 }
 
-.active{
+.active {
   color: blue;
 }
 
 .bookingField {
-/* background-color: rgb(199, 197, 197); */
-color:white;
-margin-left: 20px;
-/* margin-top: -35px; */
-border: solid 1px black;
-padding: 10px;
-padding-bottom: 20px;
+  /* background-color: rgb(199, 197, 197); */
+  color: white;
+  margin-left: 20px;
+  /* margin-top: -35px; */
+  border: solid 1px black;
+  padding: 10px;
+  padding-bottom: 20px;
 }
 
 input {
@@ -126,6 +127,6 @@ input {
   text-align: center;
 }
 
-
-
-
+html {
+  background-color: inherit;
+}
