--- a/www/css/login-reg-form.css
+++ b/www/css/login-reg-form.css
@@ -1,14 +1,4 @@
-.secondcolumn {
-  /* position: absolute ;
-  display: flexbox(right);
-  position: absolute; */
-}
-main{
-    /* background-image:linear-gradient(to bottom right,  rgba(85, 157, 185,0.8), rgba(98, 236, 156, 0.8)); */
 
-    /* background-image:linear-gradient(120deg,#740000,#2c1f1f,#ddd) */
-
-}
 /* -----------loginformulär--------- */
 .loginForm {
   
@@ -46,11 +36,11 @@ main{
  
 	padding: 1px;  
     font-size: 12px;  
-    text-shadow: 0px 1px 0px #fff;  
+     
     outline: none; 
 }
 .tb:focus{
-border: 2px solid #aaa;
+border: 1px solid #aaa;
 border:linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
 outline: none;
 /* ----------------------------------------------------------- */
@@ -85,12 +75,6 @@ outline: none;
   flex-grow: 1;
 }
 /* ------------input i reg form----------- */
-.regform2 tbody .tb{
-  
- 
-
-
-}
 .regform2 input{
   width: 100%;
   padding: 12px 20px;
@@ -104,31 +88,14 @@ outline: none;
   outline: none; 
   flex-grow: 1;
 }
-.regform2 button .btn{
-  border:none;
-  size: 200px;
+/* -----reg from knapp------- */
+.btn{
+  margin: 5px;
+  font-size: inherit;
   font-family: "Montserrat",sans-serif;
     color:rgb(255, 255, 255);
   background: #740000;
-	/* padding: 1px;  
-    font-size: 12px;  
-    text-shadow: 0px 1px 0px #fff;  
-    outline: none;  */
+	
 }
-/* .regform2 #res:focus{
-border: 2px solid #aaa;
-border:linear-gradient(to bottom left, rgb(255, 255, 255), rgb(64, 64, 70));
-outline: none; */
-/* ------------
- 
-  
 
-
-}
-.regform2 td .tb{
-  left:25%;
-  display: flexbox;
-  /* align-items:right;
-  align-content: center; 
-}*/
 
