--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,6 +9,8 @@
 @import './dropdown.css';
 @import './nav-dropdown.css';
 @import './login-reg-form.css';
+@import './contact.css';
+@import './about-us.css';
 
 * {
   box-sizing: border-box;
@@ -88,14 +90,43 @@ h2 {
 
 /* ---------------------- BOKNINGSFORMULÄR STYLING ---------------------- */
 #booking-button {
-  margin: 30px 30px 0px 30px;
+  background: rgb(116,0,0);
+  font-size: 16px;
+  color: #fff;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: .5em;
+  letter-spacing: 1.5px;
+}
+#containerForm {
+  width: 25vw;
+  margin: auto;
+}
+.booking-form {
+  width: 100%;
 }
 
-form {
-  margin-left: 10px;
-}
 #cancel-button {
-  margin-left: 10px;
+  background: rgb(116,0,0);
+  font-size: 16px;
+  color: #fff;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: .5em;
+  letter-spacing: 1.5px;
+  margin-right: 10px;
+}
+.tillbaka-button {
+  background: rgb(116,0,0);
+  font-size: 16px;
+  color: #fff;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: .5em;
+  letter-spacing: 1.5px;
+}
+.booking-end {
+  text-align: center;
 }
 
 .active {
@@ -103,17 +134,17 @@ form {
 }
 
 .bookingField {
-  /* background-color: rgb(199, 197, 197); */
-  color: white;
-  margin-left: 20px;
-  /* margin-top: -35px; */
-  border: solid 1px black;
-  padding: 10px;
-  padding-bottom: 20px;
+color:white;
+margin-left: 20px;
+padding: 10px;
+padding-bottom: 20px;
+}
+#titleName{
+  margin-bottom: 10px;
 }
 
 input {
-  width: 95%;
+  width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
